# helix

./: Cargo.toml
helix-term/src/: application.rs  commands.rs
helix-term/src/commands/: lsp.rs  syntax.rs  typed.rs
helix-term/src/handlers/: completion.rs
helix-term/src/handlers/completion/: request.rs  word.rs
helix-term/src/ui/: completion.rs  terminal.rs
helix-view/: Cargo.toml
helix-view/src/: document.rs  editor.rs  expansion.rs  gutter.rs  lib.rs  macros.rs  register.rs  terminal.rs  tree.rs  view.rs
helix-view/src/handlers/: dap.rs  lsp.rs
helix-view/src/terminal/: keyboard.rs
helix-vte/: Cargo.toml
helix-vte/src/: lib.rs
